# camelup

./: .gitignore  CMakeLists.txt  README.md
include/: boardelements.h  elements.h  randomutils.h
src/: board.cpp  board.h  boardstate.cpp  boardstate.h  legdice.cpp  legdice.h  main.cpp  probabilities.cpp  probabilities.h  randomutils.cpp  randomutils.h  track.cpp  track.h
